--- a/sell-funniture/package.json
+++ b/sell-funniture/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "lint": "ng lint",
     "serve:ssr:sell-funniture": "node dist/sell-funniture/server/server.mjs"
   },
   "private": true,
