--- a/sell-furniture/package.json
+++ b/sell-furniture/package.json
@@ -4,11 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "debug": "echo 'Current directory:' && pwd && echo 'Directory contents:' && ls -la && echo 'Dist contents (if exists):' && ls -la dist/ || echo 'No dist directory'",
     "build": "ng build --configuration=production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "serve:ssr:sell-funniture": "node dist/sell-funniture/server/server.mjs"
+    "serve:ssr:sell-funniture": "node dist/sell-funniture/server/server.mjs",
   },
   "private": true,
   "dependencies": {
