--- a/sell-furniture/package.json
+++ b/sell-furniture/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "sell-funniture",
+  "name": "sell-furniture",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "debug": "echo 'Current directory:' && pwd && echo 'Directory contents:' && ls -la && echo 'Dist contents (if exists):' && ls -la dist/ || echo 'No dist directory'",
     "build": "ng build --configuration=production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "serve:ssr:sell-funniture": "node dist/sell-funniture/server/server.mjs",
+    "serve:ssr:sell-furniture": "node dist/sell-furniture/server/server.mjs"
   },
   "private": true,
   "dependencies": {
