replace sell-furniture by sell_furniture

--- a/sell-furniture/angular.json
+++ b/sell-furniture/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "sell-furniture": {
+    "sell_furniture": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/sell-furniture",
+            "outputPath": "dist/sell_furniture",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
@@ -60,10 +60,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "sell-furniture:build:production"
+              "buildTarget": "sell_furniture:build:production"
             },
             "development": {
-              "buildTarget": "sell-furniture:build:development"
+              "buildTarget": "sell_furniture:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -71,7 +71,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "sell-furniture:build"
+            "buildTarget": "sell_furniture:build"
           }
         },
         "test": {
