--- a/sell-furniture/package.json
+++ b/sell-furniture/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sell-furniture",
+  "name": "sell_furniture",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "serve:ssr:sell-furniture": "node dist/sell-furniture/server/server.mjs"
+    "serve:ssr:sell_furniture": "node dist/sell_furniture/server/server.mjs"
   },
   "private": true,
   "dependencies": {
