--- a/sell_furniture/package.json
+++ b/sell_furniture/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --configuration=production",
+      "build": "ng build && ng run sell-furniture:server",
+  "serve:ssr": "node dist/sell-furniture/server/main.mjs",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
