--- a/sell_furniture/angular.json
+++ b/sell_furniture/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/sell_furniture",
+            "outputPath": "dist/sell_furniture/browser",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
