--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "build": "cd sell_furniture && npm run build"
+  },
   "devDependencies": {
     "@angular/cli": "^19.2.15"
   }
