--- a/sell_furniture/package.json
+++ b/sell_furniture/package.json
@@ -7,7 +7,9 @@
     "build": "ng build --configuration production",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"},
+    "e2e": "ng e2e",
+    "postinstall": "ngcc"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.2.0",
@@ -21,6 +23,7 @@
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.3",
     "@angular-devkit/build-angular": "^17.2.3",
+    "@angular/compiler-cli": "^17.2.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -28,7 +31,6 @@
   },
   "devDependencies": {
     "@angular/cli": "^17.2.3",
-    "@angular/compiler-cli": "^17.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
