--- a/sell_furniture/angular.json
+++ b/sell_furniture/angular.json
@@ -25,8 +25,7 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": ["src/styles.scss"],
-            "scripts": [],
-            "server": "src/main.server.ts"
+            "scripts": []
           },
           "configurations": {
             "production": {
