--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "build": "cd sell_furniture && npm install && npm run build && mkdir -p ../dist/sell_furniture && cp -r dist/sell_furniture/browser ../dist/sell_furniture/"
+    "build": "cd sell_furniture && npm install && npm run build",
+    "start": "cd sell_furniture && node dist/sell_furniture/server/server.mjs"
   },
   "devDependencies": {
     "@angular/cli": "^19.2.15"
