--- a/sell_furniture/angular.json
+++ b/sell_furniture/angular.json
@@ -25,7 +25,8 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": ["src/styles.scss"],
-            "scripts": []
+            "scripts": [],
+            "ssr": false
           },
           "configurations": {
             "production": {
