--- a/sell_furniture/package.json
+++ b/sell_furniture/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --configuration production",
+    "serve": "node dist/sell_furniture/server/server.mjs",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
