--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "scripts": {
-    "build": "cd sell_furniture && npm install && npm run build",
-    "start": "cd sell_furniture && node dist/sell_furniture/server/server.mjs"
+   "build": "cd sell_furniture && npm install && npm run build && mkdir -p ../dist/sell_furniture && cp -r dist/sell_furniture/browser ../dist/sell_furniture/"
   },
   "devDependencies": {
     "@angular/cli": "^19.2.15"
