--- a/sell_furniture/angular.json
+++ b/sell_furniture/angular.json
@@ -24,7 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": ["node_modules/@fortawesome/fontawesome-free/css/all.min.css","src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -76,7 +76,7 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": ["node_modules/@fortawesome/fontawesome-free/css/all.min.css", "src/styles.scss"],
             "scripts": []
           }
         }
