--- a/sell_furniture/package.json
+++ b/sell_furniture/package.json
@@ -12,9 +12,11 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^17.2.3",
     "@angular/animations": "^17.2.0",
     "@angular/common": "^17.2.0",
     "@angular/compiler": "^17.2.0",
+    "@angular/compiler-cli": "^17.2.0",
     "@angular/core": "^17.2.0",
     "@angular/forms": "^17.2.0",
     "@angular/platform-browser": "^17.2.0",
@@ -22,9 +24,13 @@
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.3",
-    "@angular-devkit/build-angular": "^17.2.3",
-    "@angular/compiler-cli": "^17.2.0",
-    "express": "^4.18.2",
+    "@fortawesome/fontawesome-free": "^7.0.1",
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
